feat: basic socket implemented.

--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
       #messages > li:nth-child(odd) { background: #efefef; }
     </style>
   </head>
-  <script src="/socket.io/socket.io.js"></script>
-  <script>
-  const socket = io();
+  <script src="http://localhost:3000/socket.io/socket.io.js"></script>
+  <script src="./script.js">
+  // const socket = io();
+
   </script>
   <body>
     <ul id="messages"></ul>
